tests/fixtures/errors/E0907_bundle_type_mismatch.mimz
// expect: E0907
bundle A { valid: bit }
bundle B { valid: bit }
module Top {
  in x: A
  out y: B
  y = x
}
